# Style-Synth

./: README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: test.yml
RecommendationFiles/: README.md  benchmark.py  example_usage.py  quick_test.py  recommendation_engine.py  requirements.txt  run_tests.sh  test_integration.py
RecommendationFiles/tests/: __init__.py  conftest.py  test_recommendation_engine.py
backend/: Dockerfile  docker-compose.yml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: endpoints.py
backend/app/classification/: class_engine.py
backend/app/database/: connection.py
backend/app/recommendations/: build_metadata.py  item_metadata.pkl  recommender.py
backend/app/services/: embedding_service.py  s3_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_outfit_endpoints.py  test_predict_endpoint.py  test_wardrobe_endpoints.py
backend/tests/unit/: test_embedding_service.py  test_s3_service.py
frontend/: Dockerfile  PR_NOTES.txt  api_client.py  app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/tests/: conftest.py  test_api_client.py
monitoring/prometheus/: prometheus.yml
