[tool.poetry]
name = "style-synth"
version = "1.0.0"
description = "ML-powered fashion recommendation system for wardrobe styling"
authors = [
    "Courtney Green",
    "Li-Wen Hu",
    "Satomi Ito",
    "Nandini Kodali",
    "Sophia Rutman",
]
readme = "README.md"
license = "MIT"
keywords = ["fashion", "machine-learning", "recommendation-system", "computer-vision", "faiss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# Core ML/Data
numpy = "^1.26.4"
scikit-learn = "^1.4.0"
scipy = "^1.12.0"
faiss-cpu = "^1.7.0"

# PyTorch
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"

# Backend
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
boto3 = "^1.34.50"
python-dotenv = "^1.0.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
prometheus-fastapi-instrumentator = "^7.0.0"

# Frontend
streamlit = "^1.32.0"

# Shared
requests = "^2.31.0"
Pillow = "^10.3.0"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = ">=0.24.0,<0.28.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "RecommendationFiles/tests",
    "backend/tests",
    "frontend/tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (test full API endpoints)"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
