[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "style-synth"
version = "1.0.0"
description = "ML-powered fashion recommendation system for wardrobe styling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Courtney Green"},
    {name = "Li-Wen Hu"},
    {name = "Satomi Ito"},
    {name = "Nandini Kodali"},
    {name = "Sophia Rutman"},
]
keywords = ["fashion", "machine-learning", "recommendation-system", "computer-vision", "faiss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.26.0",
    "Pillow>=10.4.0",
    "requests>=2.31.0",
    "scikit-learn>=1.4.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
frontend = [
    "streamlit>=1.31.0",
]
backend = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.4",
    "boto3>=1.34.0",
    "python-multipart>=0.0.6",
    "prometheus-fastapi-instrumentator>=7.0.0",
]
ml = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "faiss-cpu>=1.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "style-synth[frontend,backend,ml,dev]",
]

[project.urls]
Homepage = "https://github.com/cwnss/DSAN6700"
Repository = "https://github.com/cwnss/DSAN6700"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*", "RecommendationFiles*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
python_files = ["test_*.py"]

